# aall

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  consumer.cpp  producer.cpp
include/aall/: aalld.cpp  log.hpp
